--- a/DevKit/Views/TranscodingView.xaml
+++ b/DevKit/Views/TranscodingView.xaml
@@ -2,7 +2,9 @@
     x:Class="DevKit.Views.TranscodingView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     d:DataContext="{d:DesignInstance Type=vm:TranscodingViewModel}"
@@ -21,11 +23,51 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="212" />
         </Grid.RowDefinitions>
+
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <hc:ImageSelector
+                x:Name="ImageSelector"
+                Grid.Column="0"
+                Width="192"
+                Margin="10"
+                hc:BorderElement.CornerRadius="0"
+                BorderBrush="{DynamicResource PrimaryBrush}"
+                BorderThickness="1"
+                DefaultExt=".png"
+                Filter="图像文件(*.png;*.jpg)|*.png;*.jpg">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="ImageSelected">
+                        <b:InvokeCommandAction Command="{Binding ImageSelectedCommand}" CommandParameter="{Binding Uri, ElementName=ImageSelector}" />
+                    </b:EventTrigger>
+
+                    <b:EventTrigger EventName="ImageUnselected">
+                        <b:InvokeCommandAction Command="{Binding ImageUnselectedCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </hc:ImageSelector>
+
+            <hc:TextBox
+                Grid.Column="1"
+                Margin="0,10,10,10"
+                Padding="3,1"
+                VerticalContentAlignment="Top"
+                hc:InfoElement.Placeholder="图片转码Base64，支持右键复制转码结果"
+                BorderBrush="{DynamicResource BorderBrush}"
+                IsReadOnly="True"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                Text="{Binding Base64Result}"
+                TextWrapping="Wrap" />
+        </Grid>
     </Grid>
 </UserControl>
