--- a/DevKit/Views/TranscodingView.xaml
+++ b/DevKit/Views/TranscodingView.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     d:DataContext="{d:DesignInstance Type=vm:TranscodingViewModel}"
     d:DesignHeight="560"
@@ -35,7 +34,7 @@
 
         <Border
             Grid.Row="1"
-            Margin="10,20,0,0"
+            Margin="10"
             Style="{StaticResource BorderTipPrimary}">
             <TextBlock Text="ASCII转码" />
         </Border>
@@ -44,22 +43,52 @@
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
-                <RowDefinition />
             </Grid.RowDefinitions>
 
-            <hc:TextBox
-                Grid.Row="0"
-                Margin="10"
-                hc:InfoElement.Placeholder="请输入待转码的字符，HEX格式"
-                hc:InfoElement.ShowClearButton="True" />
+            <Grid Grid.Row="0" Margin="10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-            <hc:TextBox
-                Grid.Row="1"
-                Margin="10,0"
-                hc:InfoElement.Placeholder="请输入待转码的字符，ASCII格式"
-                hc:InfoElement.ShowClearButton="True" />
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
 
-            <Grid Grid.Row="2">
+                <Button
+                    Grid.Row="0"
+                    Grid.RowSpan="2"
+                    Grid.Column="0"
+                    Content="&#xe604;"
+                    FontFamily="/DevKit;component/Fonts/#iconfont"
+                    FontSize="16" />
+
+                <hc:TextBox
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="10,0,10,5"
+                    hc:InfoElement.Placeholder="请输入待转码的字符，HEX格式"
+                    hc:InfoElement.ShowClearButton="True" />
+
+                <hc:TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="10,5,10,0"
+                    hc:InfoElement.Placeholder="请输入待转码的字符，ASCII格式"
+                    hc:InfoElement.ShowClearButton="True" />
+
+                <Button
+                    Grid.Row="0"
+                    Grid.RowSpan="2"
+                    Grid.Column="2"
+                    Content="&#xe600;"
+                    FontFamily="/DevKit;component/Fonts/#iconfont"
+                    FontSize="16" />
+            </Grid>
+
+            <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
@@ -74,15 +103,9 @@
                     Margin="10"
                     HorizontalAlignment="Left"
                     hc:InfoElement.ShowClearButton="True"
-                    Style="{StaticResource SearchBarPlus}">
-                    <hc:SearchBar.Text>
-                        <Binding Path="HexValue" UpdateSourceTrigger="PropertyChanged">
-                            <Binding.ValidationRules>
-                                <ut:HexValidationRule />
-                            </Binding.ValidationRules>
-                        </Binding>
-                    </hc:SearchBar.Text>
-
+                    MaxLength="2"
+                    Style="{StaticResource SearchBarPlus}"
+                    Text="{Binding HexValue}">
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="SearchStarted">
                             <b:InvokeCommandAction Command="{Binding SearchStartedCommand}" CommandParameter="{Binding Text, ElementName=SearchBar}" />
@@ -112,7 +135,7 @@
 
         <Border
             Grid.Row="3"
-            Margin="10,20,0,0"
+            Margin="10,0"
             Style="{StaticResource BorderTipPrimary}">
             <TextBlock Text="图片Base64转码" />
         </Border>
