--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -2,9 +2,11 @@
     x:Class="DevKit.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:utils="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     x:Name="TargetWindow"
     Title="DevKit（开发者工具集）"
@@ -20,6 +22,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Border
@@ -27,7 +30,7 @@
             Background="White"
             BorderBrush="#EEEFF0"
             BorderThickness="1"
-            CornerRadius="4">
+            CornerRadius="5">
             <Grid Margin="12">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -54,11 +57,89 @@
 
         <TextBlock
             Grid.Row="1"
-            Margin="0,20"
+            Margin="0,20,0,8"
             FontSize="15"
             Foreground="#1B1B1B"
             Text="Android工具" />
 
-        <ListBox Grid.Row="2" />
+        <ListBox
+            x:Name="AndroidToolsListBox"
+            Grid.Row="2"
+            Background="Transparent"
+            BorderThickness="0"
+            ItemsSource="{Binding AndroidTools}">
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseDoubleClick">
+                    <b:InvokeCommandAction Command="{Binding AndroidToolsMouseDoubleClickCommand}" CommandParameter="{Binding ElementName=AndroidToolsListBox, Path=SelectedItem}" />
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <TextBlock
+                            Grid.Row="0"
+                            FontFamily="/DevKit;component/Fonts/#iconfont"
+                            FontSize="30"
+                            Foreground="#1B1B1B"
+                            Text="{Binding MenuIcon}" />
+
+                        <TextBlock
+                            Grid.Row="1"
+                            Margin="0,10,0,0"
+                            FontSize="14"
+                            Foreground="#1B1B1B"
+                            Text="{Binding MenuName}" />
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+            <!--  ListBox横排  -->
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                    <Setter Property="Width" Value="113" />
+                    <Setter Property="Height" Value="75" />
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="utils:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border
+                                    x:Name="ItemContainerBorder"
+                                    Margin="{TemplateBinding Margin}"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="#EEEFF0"
+                                    BorderThickness="1"
+                                    CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#F8F8F8" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#E7F4FF" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
     </Grid>
 </Window>
