--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -23,7 +23,10 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Border
             Grid.Row="0"
@@ -57,7 +60,7 @@
 
         <TextBlock
             Grid.Row="1"
-            Margin="0,20,0,8"
+            Margin="5,25,0,8"
             FontSize="15"
             Foreground="#1B1B1B"
             Text="Android工具" />
@@ -110,8 +113,182 @@
                 <Style TargetType="ListBoxItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                     <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                    <Setter Property="Width" Value="113" />
-                    <Setter Property="Height" Value="75" />
+                    <Setter Property="Width" Value="114" />
+                    <Setter Property="Height" Value="80" />
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="utils:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border
+                                    x:Name="ItemContainerBorder"
+                                    Margin="{TemplateBinding Margin}"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="#EEEFF0"
+                                    BorderThickness="1"
+                                    CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#F8F8F8" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#E7F4FF" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+
+        <TextBlock
+            Grid.Row="3"
+            Margin="5,25,0,8"
+            FontSize="15"
+            Foreground="#1B1B1B"
+            Text="Socket通信工具" />
+
+        <ListBox
+            x:Name="SocketToolsListBox"
+            Grid.Row="4"
+            Background="Transparent"
+            BorderThickness="0"
+            ItemsSource="{Binding SocketTools}">
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseDoubleClick">
+                    <b:InvokeCommandAction Command="{Binding SocketToolsMouseDoubleClickCommand}" CommandParameter="{Binding ElementName=SocketToolsListBox, Path=SelectedItem}" />
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <TextBlock
+                            Grid.Row="0"
+                            FontFamily="/DevKit;component/Fonts/#iconfont"
+                            FontSize="30"
+                            Foreground="#1B1B1B"
+                            Text="{Binding MenuIcon}" />
+
+                        <TextBlock
+                            Grid.Row="1"
+                            Margin="0,10,0,0"
+                            FontSize="14"
+                            Foreground="#1B1B1B"
+                            Text="{Binding MenuName}" />
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+            <!--  ListBox横排  -->
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                    <Setter Property="Width" Value="114" />
+                    <Setter Property="Height" Value="80" />
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="utils:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border
+                                    x:Name="ItemContainerBorder"
+                                    Margin="{TemplateBinding Margin}"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="#EEEFF0"
+                                    BorderThickness="1"
+                                    CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#F8F8F8" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#E7F4FF" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+
+        <TextBlock
+            Grid.Row="5"
+            Margin="5,25,0,8"
+            FontSize="15"
+            Foreground="#1B1B1B"
+            Text="其他工具" />
+
+        <ListBox
+            x:Name="OtherToolsListBox"
+            Grid.Row="6"
+            Background="Transparent"
+            BorderThickness="0"
+            ItemsSource="{Binding OtherTools}">
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseDoubleClick">
+                    <b:InvokeCommandAction Command="{Binding OtherToolsMouseDoubleClickCommand}" CommandParameter="{Binding ElementName=OtherToolsListBox, Path=SelectedItem}" />
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <TextBlock
+                            Grid.Row="0"
+                            FontFamily="/DevKit;component/Fonts/#iconfont"
+                            FontSize="30"
+                            Foreground="#1B1B1B"
+                            Text="{Binding MenuIcon}" />
+
+                        <TextBlock
+                            Grid.Row="1"
+                            Margin="0,10,0,0"
+                            FontSize="14"
+                            Foreground="#1B1B1B"
+                            Text="{Binding MenuName}" />
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+            <!--  ListBox横排  -->
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                    <Setter Property="Width" Value="114" />
+                    <Setter Property="Height" Value="80" />
                     <Setter Property="Background" Value="White" />
                     <Setter Property="utils:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
                     <Setter Property="Template">
